--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,15 +12,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK 11
-      uses: actions/setup-java@v4
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+    - uses: actions/setup-java@v5
+  with:
+    distribution: 'temurin'
+    java-version: '21'
+    cache: 'gradle'
+    cache-dependency-path: | # optional
+      sub-project/*.gradle*
+      sub-project/**/gradle-wrapper.properties
+  run: chmod +x gradlew 
+     - name:Build with Gradle
+ run: ./gradlew build
+  
